fixed blog entry title runs into actions box by wrapping title on the second line when close to the action box

--- a/bottlecap/layouts/popper/static/css/elements/actions.less
+++ b/bottlecap/layouts/popper/static/css/elements/actions.less
@@ -8,16 +8,18 @@ ul.actionsMenu {
     	margin-top: 0.134em;
     	margin-bottom: 0.677em;
     	font-size: 0.9em;
-    	position: absolute;
-    	z-index: 1;
-    	top: 0;
-    	right: 0;
-    	.horList();
+    	// position: absolute;
+    	// z-index: 1;
+    	// top: 0;
+    	// right: 0;
+        position: relative;
+    	.horList(right);
     	padding: 0;
     	margin: 0;
     	width: auto;
     	height: auto;
-	    .smaller();    	
+	    .smaller();
+        // .clearfix();  	
     	> li {
     	    float: left;
     	    margin-right: 1px;    	    
